--- a/.github/workflows/main_yikes-test-app.yml
+++ b/.github/workflows/main_yikes-test-app.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Node.js app to Azure Web App - yikes-test-app
+name: Build and deploy Next.js app to Azure Web App - yikes-test-app
 
 on:
   push:
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -23,31 +23,42 @@ jobs:
         with:
           node-version: '22.x'
 
-      - name: npm install, build, and test
+      - name: Install dependencies and build app
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm ci
+          npm run build
+
+      # ✅ Create a zip artifact (includes .next and node_modules)
+      - name: Zip artifact for deployment
+        run: zip -r release.zip . -x "*.git*" "*.github*" "*node_modules/.cache*"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: node-app
-          path: .
+          path: release.zip
+
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: node-app
-      
+
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
+
+      # ✅ Ensure dependencies exist in cloud environment
+      - name: Install production dependencies
+        run: npm ci --only=production
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -62,4 +73,3 @@ jobs:
           app-name: 'yikes-test-app'
           slot-name: 'Production'
           package: .
-          
