--- a/.github/workflows/main_yikes-test-app.yml
+++ b/.github/workflows/main_yikes-test-app.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Next.js app to Azure Web App - yikes-test-app
 
 on:
@@ -18,24 +15,26 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Node.js version
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '22.x'
 
-      - name: Install dependencies and build app
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build Next.js app
+        run: npm run build
+
+      - name: Prepare production package
         run: |
-          npm ci
-          npm run build
+          npm prune --production
+          zip -r release.zip . -x "*.git*" "*.github*" "*node_modules/.cache*"
 
-      # ✅ Create a zip artifact (includes .next and node_modules)
-      - name: Zip artifact for deployment
-        run: zip -r release.zip . -x "*.git*" "*.github*" "*node_modules/.cache*"
-
-      - name: Upload artifact for deployment job
+      - name: Upload artifact for deployment
         uses: actions/upload-artifact@v4
         with:
-          name: node-app
+          name: app
           path: release.zip
 
 
@@ -47,27 +46,22 @@ jobs:
       contents: read
 
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
-          name: node-app
+          name: app
 
-      - name: Unzip artifact for deployment
+      - name: Unzip artifact
         run: unzip release.zip
 
-      # ✅ Ensure dependencies exist in cloud environment
-      - name: Install production dependencies
-        run: npm ci --only=production
-
-      - name: Login to Azure
+      - name: Azure Login
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_29774D56CC214629BECA471903125ACA }}
           tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_648AD073DC924A389CAFE126E3A7994F }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_195CA1FE9C9448A4B39FDD8749BF7FE6 }}
 
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'yikes-test-app'
